--- a/RefactoringExercise2021/.classpath
+++ b/RefactoringExercise2021/.classpath
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/dbras/Downloads/miglayout-3.7.jar/miglayout-3.7.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/dbras/eclipse-workspace/jar_files/miglayout-core-5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/dbras/eclipse-workspace/jar_files/miglayout-swing-5.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
